# teorver

4th_hw/: CMakeLists.txt  config.json
4th_hw/1st_task/: CMakeLists.txt
4th_hw/1st_task/include/: MainWindow.h  SimulationEngine.h  SimulationWorker.h  StreetWidget.h
4th_hw/1st_task/src/: MainWindow.cpp  SimulationEngine.cpp  SimulationWorker.cpp  StreetWidget.cpp  main.cpp
4th_hw/2nd_task/: CMakeLists.txt  config.json
4th_hw/2nd_task/include/: ConfigManager.h  LogStorage.h  MainWindow.h  SimulationEngine.h  SimulationWorker.h  TrajectoryWidget.h
4th_hw/2nd_task/src/: ConfigManager.cpp  LogStorage.cpp  MainWindow.cpp  SimulationEngine.cpp  SimulationWorker.cpp  TrajectoryWidget.cpp  main.cpp
4th_hw/include/: ConfigManager.h  SimulationEngine.h
4th_hw/src/: ConfigManager.cpp  SimulationEngine.cpp  main.cpp
5_hw/: tasks  tasks.cpp
5_hw/1_task/: simulation.cpp
5_hw/3_task/: demo
5_hw/3_task/include/: attacks.h  cipher_model.h  ciphers.h
5_hw/3_task/src/: main.cpp
first_hw/: 2part.cpp  main.cpp
second_hw/: ae  af  part_1.cpp  part_2.cpp
